--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "bootstrap": "^5.0.2",
+    "bootstrap-icons": "^1.11.3",
     "lato-font": "^3.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
