--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.11.3",
+    "formik": "^2.4.5",
     "lato-font": "^3.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
@@ -24,7 +25,8 @@
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
