--- a/.github/workflows/gcp-deploy.yml
+++ b/.github/workflows/gcp-deploy.yml
@@ -3,21 +3,33 @@ name: Deploy to Hostinger
 on:
   push:
     branches:
-      - main  # Change this to match your main branch name
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  deploy:
+  build:
+    name: Build
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: npm install  # Or use yarn if you prefer
+      - name: Installing Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 18
 
-      - name: Build
-        run: npm run build  # Or your build command if using a different build tool
+      - name: Installing NPM packages
+        run: npm install
+
+      - name: Building project
+        run: npm run build
+
+      - name: Running tests
+        run: npm run test
 
       - name: Deploy to Hostinger
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
