--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vagabon",
+  "name": "vagabond",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://github.com/Qubitars-Vagabond/Landing-Website.git" ,
