--- a/.github/workflows/gcp-deploy.yml
+++ b/.github/workflows/gcp-deploy.yml
@@ -3,28 +3,27 @@ name: Deploy to Hostinger
 on:
   push:
     branches:
-      - main  # Change this to match your main branch name
+      - master
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: npm install  # Or use yarn if you prefer
+    - name: Install dependencies
+      run: npm install
 
-      - name: Build
-        run: npm run build  # Or your build command if using a different build tool
+    - name: Build
+      run: npm run build
 
-      - name: Deploy to Hostinger
-        uses: SamKirkland/FTP-Deploy-Action@4.0.0
-        with:
-          server: ${{ secrets.HOSTINGER_SERVER }}
-          username: ${{ secrets.HOSTINGER_USERNAME }}
-          password: ${{ secrets.HOSTINGER_PASSWORD }}
-          local-dir: ./build  # Change this if your build output directory is different
-          remote-dir: /path/to/your/remote/directory  # Change this to your remote directory
-          protocol: ftp
+    - name: Deploy to Hostinger
+      uses: SamKirkland/FTP-Deploy-Action@3.1.1
+      with:
+        server: ${{ secrets.HOSTINGER_SERVER }}
+        username: ${{ secrets.HOSTINGER_USERNAME }}
+        password: ${{ secrets.HOSTINGER_PASSWORD }}
+        local-dir: ./build
+        server-dir: /public_html
