--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts --max_old_space_size=8096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && node deploy.js"
+    "lint": "eslint --fix --ext .js,.jsx .",
+    "json-serve": "node public/server.js",
+    "start-developer": "concurrently \"react-scripts start\" \"node public/server.js\""
   },
   "eslintConfig": {
     "extends": [
