--- a/.github/workflows/gcp-deploy.yml
+++ b/.github/workflows/gcp-deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Hostinger
+name: Deploy to cPanel
 
 on:
   push:
@@ -9,21 +9,29 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x, 18.x]
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout Code 🚚
+        uses: actions/checkout@v3
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install Dependencies 📦
+        run: npm install
 
-    - name: Build
-      run: npm run build
+      - name: Build React App / Vue App (depending on user app) 🏗️
+        run: npm run build
 
-    - name: Deploy to Hostinger
-      uses: SamKirkland/FTP-Deploy-Action@3.1.1
-      with:
-        server: ${{ secrets.HOSTINGER_SERVER }}
-        username: ${{ secrets.HOSTINGER_USERNAME }}
-        password: ${{ secrets.HOSTINGER_PASSWORD }}
-        local-dir: ./build
-        server-dir: /public_html
+      - name: Upload to cPanel 📂
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+        with:
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          server-dir: /public_html/
+          exclude: |
+            **/.git**
+            **/.git*/**
+            **/node_modules/**
+            **/.**
