--- a/.github/workflows/gcp-deploy.yml
+++ b/.github/workflows/gcp-deploy.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install Dependencies 📦
         run: npm install
 
-      - name: Build React App / Vue App (depending on user app) 🏗️
+      - name: Build React App 🏗️
         run: npm run build
 
       - name: Upload to cPanel 📂
@@ -31,7 +31,6 @@ jobs:
           password: ${{ secrets.FTP_PASSWORD }}
           server-dir: /public_html/
           exclude: |
-            **/.git**
-            **/.git*/**
+            **/.git/**
             **/node_modules/**
-            **/.**
+            **/.*
