--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vagabond",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://thevagabondapp.com/" ,
+  "homepage": "https://github.com/Qubitars-Vagabond/Landing-Website.git" ,
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
