--- a/.github/workflows/gcp-deploy.yml
+++ b/.github/workflows/gcp-deploy.yml
@@ -44,3 +44,14 @@ jobs:
           local-dir: build/
           remote-dir: /public_html/ 
           protocol: ftp
+          exclude: |
+            - public/**
+            - vendor/**
+            - crons/**
+            - storage/**
+            - .github
+            - .github/**
+            - .env
+            - composer.json
+            - composer.lock
+            - .htaccess
